# fetch-by-similarity-submission

./: .gitignore  .gitmodules  NIOBIUM_INTEGRATION.md  NOTICE  README.md
.github/workflows/: ci.yml  compiler-tests.yml  main.yml  runner-test.yml
harness/: run_submission.py  utils.py
scripts/: build_task.sh
submission/: CMakeLists.txt
submission/include/: params.h
submission/src/: client_decrypt_decode.cpp  client_encode_encrypt_db.cpp  client_encode_encrypt_query.cpp  client_key_generation.cpp  client_postprocess.cpp  server_encrypted_compute.cpp
submission_remote/src/: client_encode_encrypt_db.py  server_encrypted_compute.py
